# snipster

./: .pre-commit-config.yaml  README.md  pyproject.toml  wins.md  wins.md.txt
snipster/: README.md
src/snipster/: exceptions.py  models.py  repo.py
tests/: conftest.py  test_model.py  test_repo.py
